# monobank-webhooks-bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yaml  pyproject.toml
monobank_webhooks_bot/: __init__.py  config.py  main.py  telegram.py
monobank_webhooks_bot/handlers/: start.py
monobank_webhooks_bot/handlers/monobank/: menu.py  personal_data.py  rates.py
monobank_webhooks_bot/routes/: monobank.py  telegram.py
