[tool.poetry]
name = "monobank-webhooks-bot"
version = "0.1.0"
description = ""
authors = ["Andrew Yatsura <andrewyazura203@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "monobank_webhooks_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95"}
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-telegram-bot = "^20.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
pylint = "^2.17.0"
pre-commit = "^3.2.0"
types-requests = "^2.28.11.15"


[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.pylint]
max-line-length = 79
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903"
]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
